teamNaam functie(werkt volledig)

--- a/TeamNameFunction.html
+++ b/TeamNameFunction.html
@@ -51,6 +51,9 @@
         }
 
         SetTeamName.addEventListener('click', SetTeamNames);
+
+
+        //team naam functie
     </script>
 
 </body>
